// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadMarkerGenes action Doesnt dispatch MARKER_GENES_LOADED if theres a different ETag stored 1`] = `
Array [
  Object {
    "ETag": "new-etag",
  },
]
`;

exports[`loadMarkerGenes action dispatches appropriately on error 1`] = `
Array [
  Object {
    "ETag": "new-etag",
  },
  Object {
    "error": "We couldn't get the marker genes",
  },
]
`;

exports[`loadMarkerGenes action dispatches appropriately on success 1`] = `
Array [
  Object {
    "ETag": "new-etag",
  },
  Object {
    "data": Object {
      "cellOrder": Array [
        0,
      ],
      "orderedGeneNames": Array [
        "geneA",
      ],
      "rawExpression": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          0,
        ],
        "size": Array [
          1,
          1,
        ],
        "values": Array [],
      },
      "stats": Object {
        "rawMean": Array [
          1,
        ],
        "rawStdev": Array [
          0,
        ],
        "truncatedMax": Array [
          1,
        ],
        "truncatedMin": Array [
          1,
        ],
      },
      "truncatedExpression": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          0,
        ],
        "size": Array [
          1,
          1,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          0,
        ],
        "size": Array [
          1,
          1,
        ],
        "values": Array [],
      },
    },
    "plotUuid": "interactiveHeatmap",
  },
]
`;
